--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/e2ee4a69e1.js" crossorigin="anonymous"></script>
+
+    <title>Megalithic Discovery App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
